--- a/src/override.css
+++ b/src/override.css
@@ -559,6 +559,9 @@ select {
 .e-content {
   transform: translate(-30px, 30px); }
 
+.margin-left-250 {
+  margin-left: 250px !important; }
+
 .big-font {
   font-size: 120px; }
 
@@ -880,6 +883,9 @@ hr {
   width: 100%; }
 
 @media only screen and (min-width: 1280px) {
+  .ghost-sidebar {
+    width: 250px; }
+
   .col {
     padding: 10px;
     max-width: 100%;
@@ -977,6 +983,9 @@ hr {
   .login-form {
     width: 20%; } }
 @media only screen and (min-width: 1024px) and (max-width: 1279px) {
+  .ghost-sidebar {
+    width: 250px; }
+
   .col {
     padding: 10px;
     max-width: 100%;
@@ -1074,6 +1083,9 @@ hr {
   .login-form {
     width: 30%; } }
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
+  .ghost-sidebar {
+    width: 250px; }
+
   .col {
     padding: 10px;
     max-width: 100%;
@@ -1173,6 +1185,9 @@ hr {
     height: 100%;
     border-radius: 0; } }
 @media only screen and (min-width: 480px) and (max-width: 767px) {
+  .ghost-sidebar {
+    width: 250px; }
+
   .col {
     padding: 10px;
     max-width: 100%;
@@ -1272,6 +1287,9 @@ hr {
     height: 100%;
     border-radius: 0; } }
 @media only screen and (max-width: 479px) and (min-width: 100px) {
+  .ghost-sidebar {
+    width: 250px; }
+
   .col {
     padding: 10px;
     max-width: 100%;
@@ -1499,9 +1517,13 @@ nav.navbar .navmenu {
   .logo .title.white {
     color: white; }
 
+.ghost-sidebar {
+  width: 250px; }
+
 .sidebar {
   position: fixed;
   background-color: #232323;
+  width: 250px;
   height: 100%; }
   .sidebar .sidebar-title {
     background-color: black;
